--- a/sprawozdanie/_tytulowa.tex
+++ b/sprawozdanie/_tytulowa.tex
@@ -24,7 +24,7 @@ Prowadzący: dr~inż. Arkadiusz Danilecki
 Autorzy:
 \begin{tabular}{lllr}
 \textbf{Grzegorz Miebs} & inf122453 & I2-2 & grzegorz.miebs@student.put.poznan.pl \\
-\textbf{Damian Jurga} & inf89154 & PIESI & ewka@w.pl \\
+\textbf{Damian Jurga} & inf122481 & IS-2 & damian.m.jurga@student.put.poznan.pl \\
 \end{tabular}
 
 \vspace{5ex}
