--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -40,7 +40,7 @@ Rozbijanie tego na dwie osobne sekcje nie ma sensu, gdyż i tak wąskim gardłem
 \begin{enumerate}
     \item Proces ubiegający się o wejście do sekcji krytycznej wysyła informację o tym do wszystkich pozostałych procesów. 
     \item Jeśli proces nie ubiega się o sekcję krytyczną, lub na jego zegarze jest większa wartość wysyła ACK. Jeśli natomiast także ubiega się o sekcję krytyczną i jednocześnie jest starszy wtedy zapamiętuje sobie proces, który ubiegał się o zgodę i wysyła mu ACK po opuszczeniu sekcji krytycznej.
-    \item Proces ubiegający się o wejście do sekcji krytycznej wchodzi do niej po zebraniu $n - M + 1$ zgód
+    \item Proces ubiegający się o wejście do sekcji krytycznej wchodzi do niej po zebraniu $n - M$ zgód
     \item Po opuszczeniu sekcji krytycznej wysyła ACK do młodszych procesów, które także ubiegały się o wejście
 \end{enumerate}
 \subsection{Prześcieradła}
@@ -55,11 +55,13 @@ Każdy proces stara się o uzyskanie $z[pid]$ z $P$ nierozróżnialnych prześci
 Każdy proces stara się zarezerwować sobie dom do straszenia, przy czym jeden dom nie może być rezerwowany zbyt często. Wprowadzamy dodatkową zmienną tablicową boolowską $H[D]$ informującą o tym, czy w danym domu można straszyć.
 \begin{enumerate}
     \item Proces zaczyna rezerwację domów od domu o numerze $ i = pid * \frac{D}{n}$.
-    \item Jeśli $H[i] == false$ to proces stara się o rezerwację domu o numerze $++i$.
+    \item Jeśli $H[i] == false$ to proces stara się o rezerwację domu o numerze $(++i) \% D$.
     \item Proces wysyła do wszystkich pozostałych procesów informację o domu w którym chce straszyć.
     \item Jeśli proces otrzymujący wiadomość nie chce straszyć w tym domu, lub jest młodszy wysyła zgodę. W przeciwnym wypadku wysyła zabronienie.
-    \item Jeśli proces otrzyma od wszystkich zgodę może straszyć w domu, ustawia $H[i] = false$, oraz $H[j] = true$, gdzie $j$ to identyfikator domu w którym straszył sotatnio. Jeśli otrzyma chociaż jedno zabronienie stara się o rezerwację domu o numerze $++i$
+    \item Jeśli proces otrzyma od wszystkich zgodę może straszyć w domu, ustawia $H[i] = false$, oraz $H[j] = true$, gdzie $j$ to identyfikator domu w którym straszył sotatnio. Jeśli otrzyma chociaż jedno zabronienie stara się o rezerwację domu o numerze $(++i) \% D$
 \end{enumerate}
+
+*W przypadku gdy dostaliśmy zgodę na wejście do sekcji krytycznej od starszego procesu, który następnie sam chce wejść do tej sekcji wysyłamy mu naszą zgodę, cofamy sobie jego zgodę i prosimy o nią ponownie (dostaniemy ją po tym jak starszy proces opuści sekcję krytyczną).
 
 %%%%%%%%%%%%%%%% literatura %%%%%%%%%%%%%%%%
 
