Dodany zegar Lamporta i losowe opóźnienia

--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -22,7 +22,7 @@
 \input{_tytulowa}
 
 \section{Wstęp}
-Zakładamy niezawodne kanały FIFO, jednostkowy czas przesyłania wiadomości oraz zerowy czas przetwarzania lokalnego.
+Zakładamy niezawodne kanały FIFO i procesy nieulegające awarii (jednostkowy czas przesyłania wiadomości oraz zerowy czas przetwarzania lokalnego?).
 \begin{tightlist}
     \item $n$ - liczba procesów
     \item $pid$ - identyfikator konkretnego procesu z zakresu [0 - n-1]
