--- a/sprawozdanie/_tytulowa.tex
+++ b/sprawozdanie/_tytulowa.tex
@@ -6,8 +6,7 @@ Przetwarzanie rozproszone}}
 
 \vspace{3ex}
 
-Część I: Przedstawienie algorytmu
-%Część II: Algorytmy optymalizacji lokalnej i globalnej, problem QAP
+Przedstawienie algorytmu
 
 \vspace{3ex}
 {\footnotesize\today}
@@ -24,7 +23,7 @@ Prowadzący: dr~inż. Arkadiusz Danilecki
 Autorzy:
 \begin{tabular}{lllr}
 \textbf{Grzegorz Miebs} & inf122453 & I2-2 & grzegorz.miebs@student.put.poznan.pl \\
-\textbf{Damian Jurga} & inf122481 & IS-2 & damian.m.jurga@student.put.poznan.pl \\
+\textbf{Damian Jurga} & inf122481 & I2-2 & damian.m.jurga@student.put.poznan.pl \\
 \end{tabular}
 
 \vspace{5ex}
